@@ -1,11 +1,11 @@
-$NetBSD: distinfo,v 1.8 2006/01/07 16:15:46 wiz Exp $
+$NetBSD: distinfo,v 1.9 2006/04/27 15:32:14 hubertf Exp $
 
-SHA1 (INIT.2003-07-24.tgz) = 92946d1b522345b6c8ac25cb11e4b621a95a9150
-RMD160 (INIT.2003-07-24.tgz) = 27a6713f239632dbc35dacd1c41c050141fdc14a
-Size (INIT.2003-07-24.tgz) = 258944 bytes
-SHA1 (ast-ksh.2003-07-24.tgz) = 08d80d4ecb02a005886bbe0adb67c7e7f53be70c
-RMD160 (ast-ksh.2003-07-24.tgz) = 6ed4f9dbfaf0d57b785029c98c2b4a163c9d782e
-Size (ast-ksh.2003-07-24.tgz) = 1459120 bytes
+SHA1 (INIT.2005-02-02.tgz) = e79470fa4f0646b187a4ad91e524a8f73129be3f
+RMD160 (INIT.2005-02-02.tgz) = 5814b658ffef2872de52c7d099461ecf518fa369
+Size (INIT.2005-02-02.tgz) = 298407 bytes
+SHA1 (ast-ksh.2005-02-02.tgz) = 390373855230de4298af8301f85d24eaa093d44d
+RMD160 (ast-ksh.2005-02-02.tgz) = f64a80ab1694fa5b66b6db02b7d772fc64aeabcb
+Size (ast-ksh.2005-02-02.tgz) = 1529366 bytes
 SHA1 (patch-aa) = dd3e5cc9b80ae6e24faed3f15af354cf34fb16a0
 SHA1 (patch-ab) = adbbdb5deeb15c1eeb38bec5685d9e6331b2b964
 SHA1 (patch-ac) = 1bb9683cb3a652c9e13d7626d4e6558464209a44
